# nc_skills_step_public

./: .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
paper/: Schooling_manually_capitalized_version.bib  nc_skills_step_public.tex  task_paper.py
paper/latex_input/: combined_robustness_checks_ncogn.tex  combined_robustness_checks_preferences_binary.tex  correlations_table_w_stars_and_references.tex  reforms_table.tex
paper/sections/: appendix.tex  conclusion.tex  data.tex  discussion.tex  empirical_strategy.tex  introduction.tex  reforms.tex  results.tex
src/nc_skills_step_public/: __init__.py  global_info.py
src/nc_skills_step_public/analysis/: analysis_RDD.py  analysis_RDD_w_month.py  analysis_other_regressions.py  plausible_values_method.py  select_sample_for_analysis.py  task_analysis_labor_market_returns.py  task_analysis_literacy_test_scores.py  task_analysis_with_optimal_bandwidth_CCT.py  task_combine_pvalues_for_MHT.py  task_correlations.py  task_get_optimal_bandwidth_CCT.py  task_placebo_test.py  task_predict_wage_changes.py  task_robustness_to_different_trends.py  task_run_do_file.py  task_single_reforms.py
src/nc_skills_step_public/data/: reforms.xlsx
src/nc_skills_step_public/data_management/: prepare_STEP_data.py  prepare_merged_data.py  selected_variables.xlsx  task_merge_STEP_with_reforms.py  task_prepare_STEP_data.py  task_prepare_merged_data.py  task_select_data_columns.py
src/nc_skills_step_public/final/: latex_table_literacy_scores.py  latex_tables_with_regression_results.py  (+14 more)
(+3 files in other folders)
