[metadata]
name = nc_skills_step_public
description = Compulsory Schooling Reforms and Non-Cognitive Skills
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antoniaen/nc_skills_step_public
author = Antonia K. Entorf
author_email = antonia.entorf@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/antoniaen/nc_skills_step_public
    Documentation = https://github.com/antoniaen/nc_skills_step_public
    Github = https://github.com/antoniaen/nc_skills_step_public
    Tracker = https://github.com/antoniaen/nc_skills_step_public/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/nc_skills_step_public/_version.py
